kube/app1-kservice.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: app1
  namespace: default
  labels:
    serving.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "10"
    spec:
      containers:
        - image: gcr.io/poc-lanzarote/cognitive-app-1
