kube/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: app2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app
        image: gcr.io/poc-orquestador/cognitive-app-2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
