kube/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: tcp
  selector:
    app: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: marketplace.gcr.io/google/redis3
        command: ['redis-server']
        args: ['--requirepass', 'vradmin']
        imagePullPolicy: IfNotPresent
        name: redis
        volumeMounts:
        - name: redisdata
          mountPath: /data
          subPath: redisdata
        ports:
        - containerPort: 6379
      volumes:
      - name: redisdata
        persistentVolumeClaim:
          claimName: redisdata
