kube/tomcat2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: app2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app
        image: tomcat:8-slim
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
