kube/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: portal-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.lanzarote.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portal
  namespace: default
spec:
  hosts:
  - api.lanzarote.com
  gateways:
  - portal-gateway
  http:
  - match:
    - headers:
        x-tenant:
          exact: restaurante
    rewrite:
      authority: app1.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
          port:
            number: 80
        weight: 100
  - match:
    - headers:
        x-tenant:
          exact: cabildo
    rewrite:
      authority: app2.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
          port:
            number: 80
        weight: 100
