kube/rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: sticky-svc
spec:
    host: web-asistentesvirtuales
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpCookie:
            name: JSESSIONID
            ttl: 0s
